--- a/config-data/ms-cliente-service.yml
+++ b/config-data/ms-cliente-service.yml
@@ -1,5 +1,6 @@
 server:
-  port: 8082
+  #port: 8081
+  port: ${PORT:${SERVER_PORT:0}}
 springdoc:
   api-docs:
     enabled: true
@@ -16,9 +17,11 @@ spring:
     url: jdbc:mysql://localhost:3306/ms_cliente
     username: root
     password:
+
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8090/eureka
+      defaultZone: ${EUREKA_URI:http://localhost:8090/eureka}
   instance:
-    hostname: localhost
+    #hostname: localhost
+    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
