--- a/config-data/ms-pedido-service.yml
+++ b/config-data/ms-pedido-service.yml
@@ -1,5 +1,6 @@
 server:
-  port: 8083
+  #port: 8083
+  port: ${PORT:${SERVER_PORT:0}}
 springdoc:
   api-docs:
     enabled: true
@@ -16,12 +17,14 @@ spring:
     url: jdbc:mysql://localhost:3306/ms_pedido
     username: root
     password:
+
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8090/eureka
+      defaultZone: ${EUREKA_URI:http://localhost:8090/eureka}
   instance:
-    hostname: localhost
+    #hostname: localhost
+    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
 
 resilience4j.circuitbreaker:
   instances:
