--- a/config-data/ms-gateway-service.yml
+++ b/config-data/ms-gateway-service.yml
@@ -1,10 +1,11 @@
 server:
-  port: 8086
+  port: 9090
 
 
 eureka:
   client:
     serviceUrl:
+      #defaultZone: http://localhost:8090/eureka
       defaultZone: ${EUREKA_URI:http://localhost:8090/eureka}
   instance:
     #hostname: localhost
@@ -16,7 +17,7 @@ spring:
     gateway:
       globalcors:
         corsConfigurations:
-          '[/]':
+          '[/**]':
             allowedOrigins: "http://localhost:4200"
             allowedHeaders: "*"
             allowedMethods:
@@ -34,16 +35,15 @@ spring:
             - Path=/categoria/**, /producto/**
           filters:
             - AuthFilter
-
         - id: ms-cliente-service
           uri: lb://ms-cliente-service
           predicates:
             - Path=/cliente/**
-
         - id: ms-pedido-service
           uri: lb://ms-pedido-service
           predicates:
             - Path=/pedido/**
+
         - id: ms-auth-service
           uri: lb://ms-auth-service
           predicates:
